<resources>
    <string name="app_name">Vung TV</string>
    <string name="text_slogan">Kho Phim Full HD 1080P</string>
    <string name="text_site_andress">vungtv.com</string>
    <string name="facebook_app_id">329967930705976</string>
    <string name="yooutube_dev_key">AIzaSyCRqUixQupNAe-uNuuuAvquiFAg7JBURs0</string>
    <string name="prefix_fcm_topic_follow">mov_follow_%s</string>
    <string name="error_no_connection">Không thể kết nối tới máy chủ, hãy kiểm tra lại mạng của bạn! hoặc liên hệ admin.</string>
    <string name="error_off_network">Không có kết nối mạng, hãy bật wifi hoặc dữ liệu mạng.</string>
    <string name="error_get_data_failed">Không tải được dữ liệu, không có kết nối mạng hoặc máy chủ gặp sự cố.</string>
    <string name="error_no_data">Không có dữ liệu !</string>
    <string name="error_service">Lỗi dịch vụ máy chủ !</string>
    <string name="comment_time_fomat">%1$s thg %2$s lúc %3$s</string>
    <string name="home_text_home">Trang chủ</string>
    <string name="home_text_the_loai">Thể loại</string>
    <string name="home_text_quoc_gia">Quốc gia</string>
    <string name="home_text_phim_le">Phim lẻ</string>
    <string name="home_text_phim_bo">Phim bộ</string>
    <string name="home_text_topIMDB">Top IMDB</string>
    <string name="home_text_phim_chieu_rap">Phim chiếu rạp</string>
    <string name="home_text_phim_sap_chieu">Phim sắp chiếu</string>
    <string name="home_text_phim_da_tai">Phim đã tải</string>
    <string name="home_text_phim_yeu_thich">Phim yêu thích</string>
    <string name="home_text_phim_theo_doi">Phim theo dõi</string>
    <string name="home_text_phim_18">Phim 18+</string>
    <string name="home_text_tvshow">TV Shows</string>
    <string name="home_text_hoat_hinh">Hoạt hình</string>
    <string name="home_text_xem_gan_day">Xem Gần Đây</string>
    <string name="footer_text_messenger">Messenge</string>
    <string name="footer_text_face">Facebook</string>
    <string name="footer_text_request">Request</string>
    <string name="footer_text_report">Hỗ trợ và góp ý</string>
    <string name="login_action_login">Đăng nhập</string>
    <string name="login_action_login_facebook">Đăng nhập bằng Facebook</string>
    <string name="login_action_login_google">Đăng nhập bằng Google+</string>
    <string name="login_action_register">Đăng ký</string>
    <string name="login_hint_email">Email đăng nhập</string>
    <string name="login_hint_pass">Mật khẩu</string>
    <string name="login_hint_repass">Nhập lại mật khẩu</string>
    <string name="login_text_forget_pass">Quên mật khẩu ?</string>
    <string name="login_text_login_ask">Đã có tài khoản ?</string>
    <string name="login_text_register_ask">Chưa có tài khoản ?</string>
    <string name="login_text_login_success">Đăng nhập thành công.</string>
    <string name="login_error_msg_login_failed">Đăng nhập thất bại!.</string>
    <string name="login_error_msg_email">Email không hợp lệ !</string>
    <string name="login_error_msg_pass">Chưa nhập mật khẩu !</string>
    <string name="popup_text_sort_view">Xem nhiều nhất</string>
    <string name="popup_text_sort_year">Năm phát hành</string>
    <string name="popup_text_sort_imdb">Điểm IMDB</string>
    <string name="popup_text_sort_nameza">Tên phim Z-A</string>
    <string name="popup_text_sort_nameaz">Tên phim A-Z</string>
    <string name="personal_text_system">Hệ thống</string>
    <string name="personal_action_setting">Cài đặt</string>
    <string name="personal_action_app_info">Giới thiệu ứng dụng</string>
    <string name="personal_action_cantact">Liên hệ quảng cáo</string>
    <string name="personal_action_user_info">Thông tin tài khoản</string>
    <string name="personal_action_change_pass">Đổi mật khẩu</string>
    <string name="personal_action_invite_friend">Mời bạn bè</string>
    <string name="personal_text_history">Lịch sử</string>
    <string name="personal_action_film_viewed">Phim đã xem</string>
    <string name="personal_action_logout">Đăng xuất</string>
    <string name="personal_action_nap_vip">Nạp VIP</string>
    <string name="personal_action_giftcode">Gift Code</string>
    <string name="personal_text_vip_expired">Thời hạn VIP : %s</string>
    <string name="personal_text_vung_con">Vừng còn : &lt;font color=#4d9658&gt;%s vừng&lt;/font&gt;</string>
    <string name="personal_text_personal">Cá nhân</string>
    <string name="popup_text_loading">Đang tải&#8230;</string>
    <string name="setting_text_version">Phiên bản</string>
    <string name="setting_text_language">Ngôn ngữ</string>
    <string name="setting_text_only_down_wifi">Chỉ download trên wifi</string>
    <string name="setting_lang_vi">Tiếng việt</string>
    <string name="setting_lang_en">English</string>
    <string name="setting_title">Cài đặt</string>
    <string name="userinfo_text_title">Thông tin tài khoản</string>
    <string name="userinfo_text_email">Email đăng nhập</string>
    <string name="userinfo_text_displayname">Tên hiển thị</string>
    <string name="userinfo_text_pass">Mật khẩu</string>
    <string name="userinfo_text_createAt">Ngày đăng ký</string>
    <string name="change_pass_text_title">Đổi mật khẩu</string>
    <string name="user_change_pass_hint_password">Mật khẩu</string>
    <string name="user_change_pass_hint_new_password">Mật khẩu mới</string>
    <string name="user_change_pass_hint_renew_password">Nhập lại mật khẩu mới</string>
    <string name="user_change_pass_btn_submit">Xác nhận</string>
    <string name="user_change_pass_success">Đổi mật khẩu thành công !</string>
    <string name="user_change_pass_error_msg_repass">Mật khẩu không khớp !</string>
    <string name="user_change_pass_error_msg_input">Không được bỏ trống !</string>
    <string name="user_change_pass_error_msg_pass_short">Mật khẩu ít nhất 6 ký tự !</string>
    <string name="user_change_name_success">Đổi tên thành công !</string>
    <string name="buyvip_text_title">Mua VIP</string>
    <string name="buyvip_package_day">Gói %s ngày</string>
    <string name="buyvip_package_money">%s vừng</string>
    <string name="buyvip_text_title_napvung">Nạp vừng</string>
    <string name="buyvip_text_nap_vung">Dùng thẻ điện thoại hoặc thẻ ngân hàng để nạp vừng\ngiúp bạn mua các gói xem phim VIP nhanh chóng và thuận tiện.</string>
    <string name="buyvip_action_nap">Nạp</string>
    <string name="buyvip_text_buy_vung">Tài khoản của bạn hiện có &lt;font color=#4d9658&gt;%s Vừng&lt;/font&gt;.&lt;br/&gt;Đăng ký gói VIP để loại bỏ quảng cáo khi xem phim</string>
    <string name="napvung_mobilecard">Dùng thẻ điện thoại</string>
    <string name="napvung_mobilecard_des">Thanh toán qua thẻ điện thoại như \nthẻ Viettel, Mobifone, Vinaphone,&#8230;</string>
    <string name="napvung_banking">Dùng thẻ ngân hàng</string>
    <string name="napvung_banking_des">Thanh toán qua thẻ ngân hàng như \nInterner Banking, Visa, MasterCard,&#8230;</string>
    <string name="napvung_loai_the">Loại thẻ</string>
    <string name="napvung_info">Thông tin nạp thẻ</string>
    <string name="napvung_menh_gia">Mệnh giá thẻ</string>
    <string name="napvung_hint_mathecao">Nhập mã thẻ cào</string>
    <string name="napvung_hint_serial">Nhập số serial</string>
    <string name="napvung_btn_nap_vung">Nạp vừng</string>
    <string name="napvung_quy_doi">Quy đổi</string>
    <string name="recharge_text_money_vung">%1$s = %2$s vừng</string>
    <string name="rechange_error_msg_empty">Chưa nhập mã thẻ cào hoặc số serial !</string>
    <string name="rechange_error_msg_card_type">Chưa chọn loại thẻ !</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="search_action_exit">Thoát</string>
    <string name="search_action_film_name">Theo tên phim</string>
    <string name="search_action_film_actor">Theo tên diễn viên</string>
    <string name="movie_details_des">%1$s&lt;br/&gt;&lt;br/&gt;Thông tin :&lt;br/&gt;&lt;font color=#888888&gt;Ngày phát hành : &lt;/font&gt;%2$s&lt;br/&gt;&lt;font color=#888888&gt;Thời lượng : &lt;/font&gt;%3$s&lt;br/&gt;&lt;font color=#888888&gt;Kịch bản : &lt;/font&gt;%4$s&lt;br/&gt;&lt;font color=#888888&gt;Đạo diễn : &lt;/font&gt;%5$s&lt;br/&gt;&lt;font color=#888888&gt;Diễn viên : &lt;/font&gt;%6$s&lt;br/&gt;&lt;font color=#888888&gt;Thể loại : &lt;/font&gt;%7$s&lt;br/&gt;&lt;font color=#888888&gt;Quốc gia : &lt;/font&gt;%8$s&lt;br/&gt;</string>
    <string name="movie_details_text_rating">Xếp hạng phim này</string>
    <string name="movie_details_text_phim_lien_quan">Phim liên quan</string>
    <string name="popup_text_hint_input_name">Nhập tên hiển thị</string>
    <string name="popup_action_change_name">Đổi tên</string>
    <string name="popup_text_filter_movies">Lọc phim</string>
    <string name="popup_text_sort">Sắp xếp</string>
    <string name="popup_text_danh_muc">Danh mục</string>
    <string name="popup_text_quoc_gia">Quốc gia</string>
    <string name="popup_text_the_loai">Thể loại</string>
    <string name="popup_text_year">Năm</string>
    <string name="popup_action_filter">Lọc</string>
    <string name="favorite_text_title">Phim yêu thích</string>
    <string name="favorite_text_msg_not_yet">Chưa yêu thích phim nào.</string>
    <string name="search_error_msg_short">Từ khóa tối thiểu 3 ký tự</string>
    <string name="search_error_msg_no_movie">Không tìm được phim nào.</string>
    <string name="movie_details_text_empty">N/A</string>
    <string name="movie_details_error_like">Để thích phim này bạn cần đăng nhập tài khoản.</string>
    <string name="movie_details_error_follow">Để theo dõi phim này bạn cần đăng nhập tài khoản.</string>
    <string name="movie_details_error_download">Tính năng này chưa cập nhật.</string>
    <string name="movie_details_text_clear_ads">Đăng ký gói VIP để loại bỏ tất cả quảng cáo.</string>
    <string name="popup_action_rating">Đánh giá</string>
    <string name="popup_text_title_rating">Đánh giá phim</string>
    <string name="popup_action_cancel">Hủy</string>
    <string name="popup_rating_text_1">Phim không hay</string>
    <string name="popup_rating_text_2">Phim bình thường</string>
    <string name="popup_rating_text_3">Phim tạm được</string>
    <string name="popup_rating_text_4">Phim hay</string>
    <string name="popup_rating_text_5">Phim rất hay</string>
    <string name="popup_rating_text_0">Phim quá tệ</string>
    <string name="movie_details_error_trailer">Trailer chưa được cập nhật.</string>
    <string name="movie_details_error_preview">Không có dữ liệu video.</string>
    <string name="popup_action_confirm">Xác nhận</string>
    <string name="popup_action_login">Đăng nhập</string>
    <string name="popup_action_buy_vip">Mua vip</string>
    <string name="movie_details_error_login">Đăng nhập tài khoản để sử dụng tính năng này.</string>
    <string name="player_clear_ads">Tắt quảng cáo</string>
    <string name="player_control_msg_retry">Có lỗi xảy ra</string>
    <string name="vtv_playback_control_clear_ads">Ẩn quảng cáo</string>
    <string name="player_text_subtutle">Phụ đề</string>
    <string name="player_text_quality">Chất lượng</string>
    <string name="player_text_quality_4k">Ultra HD (4K)</string>
    <string name="player_text_quality_2k">1440p (2K)</string>
    <string name="player_text_quality_fhd">1080p (FHD)</string>
    <string name="player_text_quality_hd">720p (HD)</string>
    <string name="player_text_quality_480p">480p</string>
    <string name="player_text_quality_360p">360p</string>
    <string name="player_error_msg_no_data">Không có dữ liệu.</string>
    <string name="player_text_video_name">Tập %1$s - %2$s</string>
    <string name="popup_text_title_list_episode">Danh sách tập</string>
    <string name="user_movies_error_no_movie">Chưa có phim nào được thêm.</string>
    <string name="popup_text_resume_last_point">Tiếp tục xem từ vị trí lần trước ?</string>
    <string name="popup_action_resume">Xem tiếp</string>
    <string name="popup_action_begin">Xem từ đầu</string>
    <string name="recent_text_title">Xem gần đây</string>
</resources>