<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_1"
    android:orientation="vertical">

    <com.vungtv.film.widget.VtvUserInfoHeaderView
        android:id="@+id/userchangepass_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/userchangepass_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_back1"/>

    <com.vungtv.film.widget.VtvTextView
        style="@style/AppTheme.Text.FilmTitle"
        android:id="@+id/userchangepass_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/userchangepass_header"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:gravity="center_vertical"
        android:background="@color/gray_2"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_lage"
        android:text="@string/change_pass_text_title"
        app:textStyle="bold"/>

    <com.vungtv.film.widget.VtvEditText
        style="@style/AppTheme.Edittext.User"
        android:id="@+id/userchangepass_ed_pass"
        android:layout_below="@+id/userchangepass_title"
        android:drawableLeft="@drawable/icon_lock"
        android:drawableStart="@drawable/icon_lock"
        android:background="@color/gray_1"
        android:inputType="textPassword"
        android:hint="@string/user_change_pass_hint_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/userchangepass_ed_pass"
        android:background="@color/dividers_dark"/>

    <com.vungtv.film.widget.VtvEditText
        style="@style/AppTheme.Edittext.User"
        android:id="@+id/userchangepass_ed_newpass"
        android:layout_below="@+id/userchangepass_ed_pass"
        android:drawableLeft="@drawable/icon_lock"
        android:drawableStart="@drawable/icon_lock"
        android:background="@color/gray_1"
        android:layout_marginTop="1dp"
        android:inputType="textPassword"
        android:hint="@string/user_change_pass_hint_new_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/userchangepass_ed_newpass"
        android:background="@color/dividers_dark"/>

    <com.vungtv.film.widget.VtvEditText
        style="@style/AppTheme.Edittext.User"
        android:id="@+id/userchangepass_ed_renewpass"
        android:layout_below="@+id/userchangepass_ed_newpass"
        android:drawableLeft="@drawable/icon_lock"
        android:drawableStart="@drawable/icon_lock"
        android:background="@color/gray_1"
        android:layout_marginTop="1dp"
        android:inputType="textPassword"
        android:hint="@string/user_change_pass_hint_renew_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/userchangepass_ed_renewpass"
        android:background="@color/dividers_dark"/>

    <com.vungtv.film.widget.VtvButton
        android:id="@+id/userchangepass_btn_submmit"
        style="@style/AppTheme.Dialog.Button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="24dp"
        android:layout_below="@+id/userchangepass_ed_renewpass"
        android:textAllCaps="true"
        android:text="@string/user_change_pass_btn_submit"
        app:textStyle="bold"/>

</RelativeLayout>
