<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/space_24"
    android:paddingRight="@dimen/space_24"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="155dp"
            android:layout_height="44dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <com.vungtv.film.widget.VtvEditText
            style="@style/AppTheme.Edittext.Login"
            android:inputType="textEmailAddress"
            android:hint="@string/login_hint_email"
            android:id="@+id/register_ed_email" />

        <com.vungtv.film.widget.VtvEditText
            style="@style/AppTheme.Edittext.Login"
            android:inputType="textPassword"
            android:hint="@string/login_hint_pass"
            android:id="@+id/register_ed_pass" />

        <com.vungtv.film.widget.VtvEditText
            style="@style/AppTheme.Edittext.Login"
            android:inputType="textPassword"
            android:hint="@string/login_hint_repass"
            android:id="@+id/register_ed_repass" />

        <com.vungtv.film.widget.VtvButton
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/space_4"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/login_action_register"
            android:textColor="@color/text_light_1"
            android:background="@drawable/ds_btn_login"
            app:textStyle="bold"
            android:id="@+id/register_btn_register" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/dividers_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/ds_btn_login_fb"
            android:id="@+id/register_btn_loginfb">

            <com.vungtv.film.widget.VtvTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:gravity="center_vertical"
                android:textColor="@color/text_light_1"
                android:textSize="@dimen/font_normal"
                android:text="@string/login_action_login_facebook"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/login_btn_loginfb_img"
                android:layout_toStartOf="@+id/login_btn_loginfb_img"
                android:background="@color/dividers_dark" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_fb"
                android:scaleType="center"
                android:contentDescription="@string/app_name"
                android:id="@+id/login_btn_loginfb_img" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/ds_btn_login_gg"
            android:id="@+id/register_btn_logingg">

            <com.vungtv.film.widget.VtvTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:gravity="center_vertical"
                android:textColor="@color/text_light_1"
                android:textSize="@dimen/font_normal"
                android:text="@string/login_action_login_google"/>

            <ImageView
                android:id="@+id/login_btn_logingg_img"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:scaleType="center"
                android:src="@drawable/icon_gg_"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/login_btn_logingg_img"
                android:layout_toStartOf="@+id/login_btn_logingg_img"
                android:background="@color/dividers_dark" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/register_btn_login"
        android:background="@color/dividers_light" />

    <LinearLayout
        android:id="@+id/register_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.vungtv.film.widget.VtvTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/text_light_2"
            android:text="@string/login_text_login_ask"/>

        <com.vungtv.film.widget.VtvTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_4"
            android:layout_marginStart="@dimen/space_4"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/colorAccent"
            android:text="@string/login_action_login"/>

    </LinearLayout>

</RelativeLayout>
