<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:background="@color/gray_2">

    <com.vungtv.film.widget.VtvTextView
        android:id="@+id/pop_msg_tv_title"
        style="@style/AppTheme.Dialog.Material.Title"
        android:text="@string/popup_text_title_rating"
        android:textColor="@color/text_dark_1"
        android:visibility="gone"
        app:textStyle="bold"/>

    <com.vungtv.film.widget.VtvTextView
        android:id="@+id/pop_msg_tv_content"
        style="@style/AppTheme.Dialog.Material.Content.Text"
        android:layout_marginTop="@dimen/space_24"
        android:layout_marginBottom="@dimen/space_8"
        tools:text="Ban cần đăng nhập"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|end"
        android:orientation="horizontal" >

        <com.vungtv.film.widget.VtvButton
            android:id="@+id/pop_msg_btn_cancel"
            style="@style/AppTheme.Dialog.Material.Button"
            android:text="@string/popup_action_cancel"
            app:textStyle="bold"/>

        <com.vungtv.film.widget.VtvButton
            android:id="@+id/pop_msg_btn_submit"
            style="@style/AppTheme.Dialog.Material.Button"
            android:text="@string/popup_action_confirm"
            app:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>